--- a/xmart-frontend/src/main/resources/control_stage.fxml
+++ b/xmart-frontend/src/main/resources/control_stage.fxml
@@ -4,12 +4,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="636.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.ControlStage">
+<AnchorPane prefHeight="636.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.ControlStage">
    <children>
-      <TextField layoutX="65.0" layoutY="41.0" />
-      <Button layoutX="243.0" layoutY="40.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="77.0" text="rechercher" />
+      <TextField layoutX="232.0" layoutY="40.0" promptText=" Mots clés" />
+      <Button layoutX="397.0" layoutY="40.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="77.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold;" text="rechercher" />
       <ScrollPane layoutX="93.0" layoutY="103.0" prefHeight="490.0" prefWidth="420.0" AnchorPane.leftAnchor="93.0" AnchorPane.rightAnchor="87.19999999999999">
          <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="474.0" prefWidth="422.0" style="-fx-background-color: white;">
@@ -18,12 +20,17 @@
                   <Label fx:id="description" layoutX="21.0" layoutY="162.0" prefHeight="255.0" prefWidth="380.0" text="description" />
                   <Label fx:id="duree" layoutX="67.0" layoutY="105.0" prefHeight="18.0" prefWidth="166.0" text="duree" />
                   <Label fx:id="domaine" layoutX="44.0" layoutY="70.0" prefHeight="18.0" prefWidth="166.0" text="domaine" />
-                  <Button fx:id="postuler" layoutX="159.0" layoutY="435.0" mnemonicParsing="false" onAction="#postuler" prefHeight="26.0" prefWidth="86.0" text="Postuler" />
+                  <Button fx:id="postuler" layoutX="159.0" layoutY="435.0" mnemonicParsing="false" onAction="#postuler" prefHeight="26.0" prefWidth="86.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold;" text="Postuler" />
                </children>
             </AnchorPane>
          </content>
       </ScrollPane>
-      <Button layoutX="307.0" layoutY="591.0" mnemonicParsing="false" onAction="#suivant" prefHeight="26.0" prefWidth="70.0" text="Suivant" />
-      <Button layoutX="208.0" layoutY="594.0" mnemonicParsing="false" onAction="#precedent" text="Précedent" />
+      <Button layoutX="307.0" layoutY="593.0" mnemonicParsing="false" onAction="#suivant" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: white; -fx-text-fill: red; -fx-font-weight: bold; -fx-border-color: red;" text="Suivant" />
+      <Button layoutX="208.0" layoutY="594.0" mnemonicParsing="false" onAction="#precedent" style="-fx-background-color: white; -fx-text-fill: red; -fx-font-weight: bold; -fx-border-color: red;" text="Précedent" />
+      <ImageView fitHeight="57.0" fitWidth="122.0" layoutX="10.0" layoutY="10.0">
+         <image>
+            <Image url="@../../../../../myUp.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
