--- a/xmart-frontend/src/main/resources/Candidater.fxml
+++ b/xmart-frontend/src/main/resources/Candidater.fxml
@@ -3,27 +3,34 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="628.0" prefWidth="693.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.Candidater">
    <children>
-      <Label layoutX="74.0" layoutY="90.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Votre nom" />
-      <Label layoutX="74.0" layoutY="150.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Votre prenom" />
-      <Label layoutX="73.0" layoutY="206.0" prefHeight="18.0" prefWidth="57.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Email" />
-      <Label layoutX="72.0" layoutY="259.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Adresse postal" />
-      <Label layoutX="118.0" layoutY="322.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Votre CV" />
-      <Label layoutX="111.0" layoutY="381.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Votre lettre de motivation" />
-      <Button fx:id="CV" layoutX="312.0" layoutY="320.0" mnemonicParsing="false" onMouseClicked="#CV" prefHeight="26.0" prefWidth="100.0" text="Joindre mon cv" />
-      <Button fx:id="motivation" layoutX="312.0" layoutY="377.0" mnemonicParsing="false" onMouseClicked="#lettre" text="Joindre ma lettre de motivation" />
-      <Label layoutX="111.0" layoutY="429.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Autre document" />
-      <Button fx:id="autres" layoutX="312.0" layoutY="425.0" mnemonicParsing="false" onMouseClicked="#autres" text="Autres" />
-      <TextField layoutX="212.0" layoutY="86.0" />
-      <TextField layoutX="212.0" layoutY="255.0" />
-      <TextField layoutX="212.0" layoutY="202.0" />
-      <TextField layoutX="212.0" layoutY="146.0" />
-      <Label fx:id="lab" layoutX="463.0" layoutY="324.0" prefHeight="18.0" prefWidth="86.0" text="label" visible="false" />
-      <Button layoutX="178.0" layoutY="522.0" mnemonicParsing="false" onAction="#valider" prefHeight="38.0" prefWidth="182.0" text="Valider" />
-      <Label fx:id="lett" layoutX="513.0" layoutY="380.0" prefHeight="18.0" prefWidth="86.0" visible="false" />
-      <Label fx:id="autre" layoutX="506.0" layoutY="430.0" prefHeight="18.0" prefWidth="86.0" text="Label" visible="false" />
+      <Label layoutX="109.0" layoutY="112.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Votre nom" />
+      <Label layoutX="109.0" layoutY="172.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Votre prenom" />
+      <Label layoutX="108.0" layoutY="228.0" prefHeight="18.0" prefWidth="57.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Email" />
+      <Label layoutX="107.0" layoutY="281.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Adresse postal" />
+      <Label layoutX="153.0" layoutY="344.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Votre CV" />
+      <Label layoutX="146.0" layoutY="403.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Votre lettre de motivation" />
+      <Button fx:id="CV" layoutX="347.0" layoutY="342.0" mnemonicParsing="false" onMouseClicked="#CV" prefHeight="26.0" prefWidth="100.0" text="Joindre mon cv" />
+      <Button fx:id="motivation" layoutX="347.0" layoutY="399.0" mnemonicParsing="false" onMouseClicked="#lettre" text="Joindre ma lettre de motivation" />
+      <Label layoutX="146.0" layoutY="451.0" style="-fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: red;" text="Autre document" />
+      <Button fx:id="autres" layoutX="347.0" layoutY="447.0" mnemonicParsing="false" onMouseClicked="#autres" text="Autres" />
+      <TextField fx:id="nom" layoutX="247.0" layoutY="108.0" />
+      <TextField fx:id="adresse" layoutX="247.0" layoutY="277.0" />
+      <TextField fx:id="email" layoutX="247.0" layoutY="224.0" />
+      <TextField fx:id="prenom" layoutX="247.0" layoutY="168.0" />
+      <Label fx:id="lab" layoutX="498.0" layoutY="346.0" prefHeight="18.0" prefWidth="86.0" />
+      <Button fx:id="valider" layoutX="213.0" layoutY="544.0" mnemonicParsing="false" onAction="#valider" prefHeight="38.0" prefWidth="182.0" text="Valider" />
+      <Label fx:id="lett" layoutX="548.0" layoutY="402.0" prefHeight="18.0" prefWidth="86.0" />
+      <Label fx:id="autre" layoutX="541.0" layoutY="452.0" prefHeight="18.0" prefWidth="86.0" />
+      <ImageView fitHeight="70.0" fitWidth="150.0" layoutX="7.0" layoutY="7.0">
+         <image>
+            <Image url="@photo/myUp.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
