--- a/xmart-frontend/src/main/resources/control_stage.fxml
+++ b/xmart-frontend/src/main/resources/control_stage.fxml
@@ -12,14 +12,14 @@
    <children>
       <TextField layoutX="232.0" layoutY="40.0" promptText=" Mots clés" />
       <Button layoutX="397.0" layoutY="40.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="77.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold;" text="rechercher" />
-      <ScrollPane layoutX="93.0" layoutY="103.0" prefHeight="490.0" prefWidth="420.0" AnchorPane.leftAnchor="93.0" AnchorPane.rightAnchor="87.19999999999999">
+      <ScrollPane layoutX="66.4" layoutY="103.0" prefHeight="490.0" prefWidth="481.0" AnchorPane.leftAnchor="66.0" AnchorPane.rightAnchor="53.0">
          <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="474.0" prefWidth="422.0" style="-fx-background-color: white;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="491.0" prefWidth="479.0" style="-fx-background-color: white;">
                <children>
                   <Label fx:id="titre" layoutX="29.0" layoutY="23.0" prefHeight="36.0" prefWidth="374.0" style="-fx-font-weight: bold; -fx-font-size: 20px; -fx-text-alignment: center;" text="    titre" textAlignment="CENTER" />
-                  <Label fx:id="description" layoutX="21.0" layoutY="162.0" prefHeight="255.0" prefWidth="380.0" text="description" />
-                  <Label fx:id="duree" layoutX="67.0" layoutY="105.0" prefHeight="18.0" prefWidth="166.0" text="duree" />
-                  <Label fx:id="domaine" layoutX="44.0" layoutY="70.0" prefHeight="18.0" prefWidth="166.0" text="domaine" />
+                  <Label fx:id="description" layoutX="21.0" layoutY="127.0" prefHeight="302.0" prefWidth="398.0" text="description" />
+                  <Label fx:id="duree" layoutX="67.0" layoutY="105.0" prefHeight="18.0" prefWidth="166.0" style="-fx-font-weight: bold;" text="duree" />
+                  <Label fx:id="domaine" layoutX="44.0" layoutY="70.0" prefHeight="18.0" prefWidth="166.0" style="-fx-font-weight: bold;" text="domaine" />
                   <Button fx:id="postuler" layoutX="159.0" layoutY="435.0" mnemonicParsing="false" onAction="#postuler" prefHeight="26.0" prefWidth="86.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold;" text="Postuler" />
                </children>
             </AnchorPane>
@@ -29,7 +29,7 @@
       <Button layoutX="208.0" layoutY="594.0" mnemonicParsing="false" onAction="#precedent" style="-fx-background-color: white; -fx-text-fill: red; -fx-font-weight: bold; -fx-border-color: red;" text="Précedent" />
       <ImageView fitHeight="57.0" fitWidth="122.0" layoutX="10.0" layoutY="10.0">
          <image>
-            <Image url="@../../../../../myUp.jpg" />
+            <Image url="@photo/myUp.jpg" />
          </image>
       </ImageView>
    </children>
