--- a/xmart-frontend/src/main/resources/principal.fxml
+++ b/xmart-frontend/src/main/resources/principal.fxml
@@ -27,17 +27,17 @@
             <Image url="@photo/NousSuivre.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="104.0" fitWidth="200.0" layoutX="10.0" layoutY="10.0">
+      <ImageView fitHeight="66.0" fitWidth="156.0">
          <image>
             <Image url="@photo/myUp.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="192.0" fitWidth="336.0" layoutX="199.0" layoutY="371.0">
+      <ImageView fitHeight="192.0" fitWidth="336.0" layoutX="199.0" layoutY="371.0" onMouseClicked="#evenement">
          <image>
             <Image url="@photo/evenement.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="185.0" fitWidth="336.0" layoutY="186.0">
+      <ImageView fitHeight="185.0" fitWidth="336.0" layoutY="186.0" onMouseClicked="#commerce">
          <image>
             <Image url="@photo/services.jpg" />
          </image>
