--- a/xmart-frontend/src/main/resources/CreateAcount.fxml
+++ b/xmart-frontend/src/main/resources/CreateAcount.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="577.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.CreateAcount">
    <children>
       <ImageView fitHeight="72.0" fitWidth="132.0" layoutX="6.0" pickOnBounds="true" preserveRatio="true">
@@ -28,5 +27,6 @@
       <TextField fx:id="email4" layoutX="194.0" layoutY="270.0" prefHeight="26.0" prefWidth="186.0" />
       <Button fx:id="seConnecter" layoutX="205.0" layoutY="480.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="164.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" text="S'inscrire" />
       <Label layoutX="455.0" layoutY="516.0" onMouseClicked="#connexion" prefHeight="18.0" prefWidth="104.0" style="-fx-text-fill: blue;" text="j'ai déja un compte" />
+      <Button layoutX="481.0" layoutY="155.0" mnemonicParsing="false" onAction="#kk" text="Button" />
    </children>
 </AnchorPane>
