--- a/xmart-frontend/src/main/resources/Admin.fxml
+++ b/xmart-frontend/src/main/resources/Admin.fxml
@@ -58,12 +58,11 @@
         </Menu>
       </menus>
     </MenuBar>
-    <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true"
-               VBox.vgrow="ALWAYS">
+    <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" VBox.vgrow="ALWAYS">
       <items>
         <AnchorPane style="-fx-background-color: white;">
           <children>
-                  <ImageView fitHeight="131.0" fitWidth="242.0" layoutX="11.0" layoutY="100.0" onMouseClicked="#mesDemandes" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="131.0" fitWidth="242.0" layoutX="11.0" layoutY="100.0" onMouseClicked="#DemandeConnexion" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@photo/www.conches-sur-gondoire.fr_capture-15.jpg" />
                      </image>
@@ -73,7 +72,11 @@
                         <Image url="@photo/myUp.jpg" />
                      </image>
                   </ImageView>
-                  <Label layoutX="19.0" layoutY="80.0" prefHeight="40.0" prefWidth="184.0" style="-fx-text-fill: red; -fx-font-weight: bold;" text="               Mes demandes" />
+                  <ImageView fitHeight="150.0" fitWidth="222.0" layoutX="1.0" layoutY="231.0" onMouseClicked="#mesDemandes" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@photo/images.jpeg" />
+                     </image>
+                  </ImageView>
           </children>
         </AnchorPane>
         <ScrollPane>
@@ -91,11 +94,11 @@
             <Font size="11.0" fx:id="x3" />
           </font>
           <textFill>
-            <Color red="0.625" green="0.625" blue="0.625"  />
+            <Color red="0.625" green="0.625" blue="0.625" />
           </textFill>
         </Label>
         <Pane HBox.hgrow="ALWAYS" />
-        <Label font="$x3" text="Right status"  HBox.hgrow="NEVER" />
+        <Label font="$x3" text="Right status" HBox.hgrow="NEVER" />
       </children>
       <padding>
         <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
