--- a/xmart-frontend/src/main/resources/Offres_stages_admin.fxml
+++ b/xmart-frontend/src/main/resources/Offres_stages_admin.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="790.0" prefWidth="627.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.Mesdemandes">
+<AnchorPane prefHeight="790.0" prefWidth="627.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.Offres_stages_admin">
    <children>
       <ScrollPane layoutX="88.0" layoutY="195.0" prefHeight="490.0" prefWidth="377.0" AnchorPane.leftAnchor="88.0" AnchorPane.rightAnchor="162.0">
          <content>
