--- a/xmart-frontend/src/main/resources/CreateAcount.fxml
+++ b/xmart-frontend/src/main/resources/CreateAcount.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="649.0" prefWidth="604.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.CreateAcount">
+<AnchorPane prefHeight="691.0" prefWidth="603.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.CreateAcount">
    <children>
       <ImageView fitHeight="72.0" fitWidth="132.0" layoutX="6.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -25,9 +25,12 @@
       <TextField fx:id="Nom" layoutX="265.0" layoutY="230.0" prefHeight="26.0" prefWidth="186.0" />
       <TextField fx:id="prenom" layoutX="265.0" layoutY="289.0" prefHeight="26.0" prefWidth="186.0" />
       <TextField fx:id="email" layoutX="265.0" layoutY="346.0" prefHeight="26.0" prefWidth="186.0" />
-      <Button fx:id="seConnecter" layoutX="202.0" layoutY="556.0" mnemonicParsing="false" onAction="#seConnecter" prefHeight="36.0" prefWidth="164.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" text="S'inscrire" />
-      <Label layoutX="452.0" layoutY="592.0" onMouseClicked="#connexion" prefHeight="18.0" prefWidth="104.0" style="-fx-text-fill: blue;" text="j'ai déja un compte" />
-      <Label layoutX="48.0" layoutY="166.0" prefHeight="26.0" prefWidth="186.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 15px;" text="Matricule" />
+      <Button fx:id="seConnecter" layoutX="203.0" layoutY="622.0" mnemonicParsing="false" onAction="#seConnecter" prefHeight="36.0" prefWidth="164.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" text="S'inscrire" />
+      <Label layoutX="451.0" layoutY="631.0" onMouseClicked="#connexion" prefHeight="18.0" prefWidth="104.0" style="-fx-text-fill: blue;" text="j'ai déja un compte" />
+      <Label layoutX="45.0" layoutY="166.0" prefHeight="26.0" prefWidth="186.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 15px;" text="Matricule" />
       <TextField fx:id="Matricule" layoutX="265.0" layoutY="166.0" prefHeight="26.0" prefWidth="186.0" />
+      <Label layoutX="78.0" layoutY="538.0" prefHeight="26.0" prefWidth="186.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 15px;" text="Inserer votre photo" />
+      <Button fx:id="fichier" layoutX="272.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#fichier" prefHeight="26.0" prefWidth="85.0" text="fichier" />
+      <Label fx:id="photo" layoutX="376.0" layoutY="534.0" prefHeight="36.0" prefWidth="219.0" />
    </children>
 </AnchorPane>
