--- a/xmart-frontend/src/main/resources/DemandeConnexion.fxml
+++ b/xmart-frontend/src/main/resources/DemandeConnexion.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="430.0" prefWidth="602.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.DemandeConnexion">
    <children>
       <ImageView fitHeight="73.0" fitWidth="145.0" pickOnBounds="true" preserveRatio="true">
@@ -20,7 +19,7 @@
       <Label layoutX="70.0" layoutY="194.0" prefHeight="27.0" prefWidth="162.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 16px;" text="Matricule" />
       <Button layoutX="226.0" layoutY="362.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="123.0" style="-fx-background-color: green; -fx-text-fill: white; -fx-font-weight: bold;" text="Valider" />
       <Label fx:id="nom" layoutX="226.0" layoutY="105.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
-      <Label fx:id="email" layoutX="226.0" layoutY="240.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
+      <Label fx:id="email" layoutX="228.0" layoutY="240.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
       <Label fx:id="matricule" layoutX="226.0" layoutY="194.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
       <Label fx:id="prenom" layoutX="228.0" layoutY="151.0" prefHeight="27.0" prefWidth="242.0" style="-fx-font-size: 16px;" text="Label" />
       <ImageView fitHeight="27.0" fitWidth="32.0" layoutX="347.0" layoutY="292.0" onMouseClicked="#suivant" pickOnBounds="true" preserveRatio="true">
@@ -33,5 +32,6 @@
             <Image url="@photo/precedent.png" />
          </image>
       </ImageView>
+      <ImageView fx:id="photo" fitHeight="130.0" fitWidth="181.0" layoutX="394.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
