--- a/xmart-frontend/src/main/resources/control_stage.fxml
+++ b/xmart-frontend/src/main/resources/control_stage.fxml
@@ -32,7 +32,9 @@
             <Image url="@photo/myUp.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="57.0" layoutY="135.0" text="Nombre total des offres " />
-      <Label fx:id="nombre" layoutX="218.0" layoutY="135.0" prefHeight="18.0" prefWidth="98.0" text="nombre" />
+      <Label layoutX="88.0" layoutY="136.0" text="Nombre total des offres " />
+      <Label fx:id="nombre" layoutX="328.0" layoutY="136.0" prefHeight="18.0" prefWidth="98.0" style="-fx-text-fill: red;" text="nombre" />
+      <Label layoutX="88.0" layoutY="166.0" text="Nombre de candidature pour cette offre" />
+      <Label fx:id="Nombrecandidatures" layoutX="328.0" layoutY="166.0" prefHeight="18.0" prefWidth="98.0" style="-fx-text-fill: red;" text="nombre" />
    </children>
 </AnchorPane>
