--- a/xmart-frontend/src/main/resources/CreateAcount.fxml
+++ b/xmart-frontend/src/main/resources/CreateAcount.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -20,17 +21,17 @@
       <Label layoutX="48.0" layoutY="346.0" prefHeight="26.0" prefWidth="186.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 15px;" text="Email" />
       <Label layoutX="48.0" layoutY="289.0" prefHeight="26.0" prefWidth="186.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 15px;" text="Prénom" />
       <Label layoutX="48.0" layoutY="470.0" prefHeight="26.0" prefWidth="186.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 15px;" text="Confirmer le mot de passe" />
-      <TextField fx:id="cnf_mot_de_passe" layoutX="265.0" layoutY="470.0" prefHeight="26.0" prefWidth="186.0" />
-      <TextField fx:id="mot_de_passe" layoutX="265.0" layoutY="410.0" prefHeight="26.0" prefWidth="186.0" />
       <TextField fx:id="Nom" layoutX="265.0" layoutY="230.0" prefHeight="26.0" prefWidth="186.0" />
       <TextField fx:id="prenom" layoutX="265.0" layoutY="289.0" prefHeight="26.0" prefWidth="186.0" />
       <TextField fx:id="email" layoutX="265.0" layoutY="346.0" prefHeight="26.0" prefWidth="186.0" />
       <Button fx:id="seConnecter" layoutX="203.0" layoutY="622.0" mnemonicParsing="false" onAction="#seConnecter" prefHeight="36.0" prefWidth="164.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-size: 15px; -fx-font-weight: bold;" text="S'inscrire" />
       <Label layoutX="451.0" layoutY="631.0" onMouseClicked="#connexion" prefHeight="18.0" prefWidth="104.0" style="-fx-text-fill: blue;" text="j'ai déja un compte" />
-      <Label layoutX="45.0" layoutY="166.0" prefHeight="26.0" prefWidth="186.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 15px;" text="Matricule" />
+      <Label layoutX="45.0" layoutY="166.0" prefHeight="26.0" prefWidth="186.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 15px;" text="Numero étudiant" />
       <TextField fx:id="Matricule" layoutX="265.0" layoutY="166.0" prefHeight="26.0" prefWidth="186.0" />
       <Label layoutX="78.0" layoutY="538.0" prefHeight="26.0" prefWidth="186.0" style="-fx-text-fill: red; -fx-font-weight: bold; -fx-font-size: 15px;" text="Inserer votre photo" />
       <Button fx:id="fichier" layoutX="272.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#fichier" prefHeight="26.0" prefWidth="85.0" text="fichier" />
       <Label fx:id="photo" layoutX="376.0" layoutY="534.0" prefHeight="36.0" prefWidth="219.0" />
+      <PasswordField fx:id="mot_de_passe" layoutX="265.0" layoutY="411.0" prefHeight="26.0" prefWidth="186.0" />
+      <PasswordField fx:id="cnf_mot_de_passe" layoutX="265.0" layoutY="471.0" prefHeight="26.0" prefWidth="186.0" />
    </children>
 </AnchorPane>
