--- a/xmart-frontend/src/main/resources/principal.fxml
+++ b/xmart-frontend/src/main/resources/principal.fxml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="672.0" prefWidth="720.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.Principal">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="672.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.Principal">
    <children>
       <BorderPane layoutX="180.0" layoutY="7.0" prefHeight="55.0" prefWidth="218.0" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="166.6" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="100.0" layoutY="351.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="80.0" layoutY="351.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="201.0" layoutY="284.0" pickOnBounds="true" preserveRatio="true" />
       <BorderPane layoutX="389.0" layoutY="133.0" prefHeight="290.0" prefWidth="242.0">
          <bottom>
 
          </bottom>
-         <center>
+         <right>
             <ImageView fitHeight="188.0" fitWidth="312.0" onMouseClicked="#clique" BorderPane.alignment="CENTER">
                <image>
                   <Image url="@photo/Offres.png" />
                </image>
             </ImageView>
-         </center>
+         </right>
       </BorderPane>
       <ImageView fitHeight="104.0" fitWidth="220.0" layoutY="568.0">
          <image>
@@ -42,6 +43,19 @@
             <Image url="@photo/services.jpg" />
          </image>
       </ImageView>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="281.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@photo/PrincipalCLOSED.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="Image" layoutX="-208.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@photo/Gauche%20(1).png" />
+         </image>
+      </ImageView>
+      <Button fx:id="BOpen" layoutY="-1.0" mnemonicParsing="false" onMouseEntered="#MEnt" opacity="0.0" prefHeight="719.0" prefWidth="31.0" text="Button" />
+      <Button fx:id="BClose" layoutX="203.0" layoutY="-2.0" mnemonicParsing="false" onMouseEntered="#MExi" opacity="0.0" prefHeight="724.0" prefWidth="30.0" text="Button" />
 
    </children>
 </AnchorPane>
