--- a/xmart-frontend/src/main/resources/Principal2.fxml
+++ b/xmart-frontend/src/main/resources/Principal2.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,6 +15,7 @@
          </image>
       </ImageView>
       <Button fx:id="BOpen" mnemonicParsing="false" onMouseEntered="#BOpen" opacity="0.0" prefHeight="721.0" prefWidth="34.0" text="Button" />
+      <Button fx:id="BClose" layoutX="-500.0" mnemonicParsing="false" onMouseEntered="#BClose" opacity="0.0" prefHeight="722.0" prefWidth="465.0" text="Button" />
       <Pane fx:id="Panneau" layoutX="-207.0" prefHeight="720.0" prefWidth="238.0">
          <children>
             <ImageView pickOnBounds="true" preserveRatio="true">
@@ -22,6 +24,7 @@
                </image>
             </ImageView>
             <Button fx:id="Deconnexion" layoutY="674.0" mnemonicParsing="false" onAction="#Deconnecter" opacity="0.0" prefHeight="26.0" prefWidth="206.0" text="Button" />
+            <Label fx:id="fullName" layoutX="4.0" layoutY="176.0" prefHeight="72.0" prefWidth="206.0" style="-fx-text-fill: white; -fx-font-weight: bold; -fx-font-size: 20px;" text="Label" />
          </children>
       </Pane>
       <Button fx:id="BStages" layoutX="266.0" layoutY="33.0" mnemonicParsing="false" onAction="#BStages" opacity="0.0" prefHeight="172.0" prefWidth="146.0" text="Button" />
