--- a/xmart-frontend/src/main/resources/Offres_stages_admin.fxml
+++ b/xmart-frontend/src/main/resources/Offres_stages_admin.fxml
@@ -17,6 +17,7 @@
                   <Label fx:id="description" layoutX="1.0" layoutY="127.0" prefHeight="342.0" prefWidth="358.0" text="description" />
                   <Label fx:id="duree" layoutX="67.0" layoutY="105.0" prefHeight="18.0" prefWidth="166.0" style="-fx-font-weight: bold;" text="duree" />
                   <Label fx:id="domaine" layoutX="44.0" layoutY="70.0" prefHeight="18.0" prefWidth="166.0" style="-fx-font-weight: bold;" text="domaine" />
+                  <Label fx:id="Niveau" layoutX="96.0" layoutY="150.0" prefHeight="18.0" prefWidth="46.0" style="-fx-font-weight: bold;" text="Niveau" />
                </children>
             </AnchorPane>
          </content>
