Nouvelle interface de stage

--- a/xmart-frontend/src/main/resources/Stages2.fxml
+++ b/xmart-frontend/src/main/resources/Stages2.fxml
@@ -2,21 +2,21 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="672.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="672.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.ControlStage">
    <children>
       <ImageView pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@photo/Offres_StageBG.png" />
          </image>
       </ImageView>
-      <Pane layoutX="100.0" layoutY="86.0" prefHeight="547.0" prefWidth="472.0" style="-fx-background-color: &quot;7195e1&quot;;">
+      <Pane fx:id="PA" layoutX="100.0" layoutY="86.0" prefHeight="547.0" prefWidth="472.0" style="-fx-background-color: &quot;7195e1&quot;;">
          <children>
             <ImageView pickOnBounds="true" preserveRatio="true">
                <image>
@@ -33,22 +33,71 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label fx:id="titre" layoutX="20.0" layoutY="95.0" text="Titre" textFill="#fafafa">
+            <Label fx:id="titre" layoutX="20.0" layoutY="93.0" text="Titre" textFill="#fafafa">
                <font>
                   <Font name="System Bold" size="30.0" />
                </font>
             </Label>
-            <Label fx:id="domaine" layoutX="23.0" layoutY="132.0" prefHeight="18.0" prefWidth="166.0" style="-fx-font-weight: bold;" text="Domaine" textFill="WHITE">
+            <Label fx:id="domaine" layoutX="23.0" layoutY="130.0" prefHeight="18.0" prefWidth="166.0" style="-fx-font-weight: bold;" text="Domaine" textFill="WHITE">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="duree" layoutX="23.0" layoutY="145.0" prefHeight="18.0" prefWidth="166.0" style="-fx-font-weight: bold;" text="Niveau" textFill="WHITE">
+            <Label fx:id="duree" layoutX="23.0" layoutY="144.0" prefHeight="18.0" prefWidth="166.0" style="-fx-font-weight: bold;" text="Durée" textFill="WHITE">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="description" layoutX="24.0" layoutY="151.0" prefHeight="302.0" prefWidth="398.0" text="Description" textFill="WHITE" />
+            <Label fx:id="description" layoutX="24.0" layoutY="175.0" prefHeight="278.0" prefWidth="398.0" text="Description" textFill="WHITE" />
+            <Label fx:id="Niveau" layoutX="23.0" layoutY="158.0" prefHeight="18.0" prefWidth="46.0" style="-fx-font-weight: bold;" text="Niveau" textFill="WHITE">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <Button layoutX="64.0" layoutY="489.0" mnemonicParsing="false" onAction="#precedent" style="-fx-background-color: white; -fx-text-fill: red; -fx-font-weight: bold; -fx-border-color: red;" text="Précedent" />
+            <Button layoutX="332.0" layoutY="489.0" mnemonicParsing="false" onAction="#suivant" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: white; -fx-text-fill: red; -fx-font-weight: bold; -fx-border-color: red;" text="Suivant" />
+         </children>
+      </Pane>
+      <Pane fx:id="PB" layoutX="-505.0" layoutY="86.0" prefHeight="547.0" prefWidth="472.0" style="-fx-background-color: &quot;7195e1&quot;;">
+         <children>
+            <ImageView pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@photo/Stage_Pannel.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="nombre1" layoutX="249.0" layoutY="30.0" text="00" textFill="#fafafa">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="Nombrecandidatures1" layoutX="432.0" layoutY="57.0" text="00" textFill="#fafafa">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="titre1" layoutX="20.0" layoutY="93.0" text="Titre" textFill="#fafafa">
+               <font>
+                  <Font name="System Bold" size="30.0" />
+               </font>
+            </Label>
+            <Label fx:id="domaine1" layoutX="23.0" layoutY="130.0" prefHeight="18.0" prefWidth="166.0" style="-fx-font-weight: bold;" text="Domaine" textFill="WHITE">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <Label fx:id="duree1" layoutX="23.0" layoutY="144.0" prefHeight="18.0" prefWidth="166.0" style="-fx-font-weight: bold;" text="Durée" textFill="WHITE">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <Label fx:id="description1" layoutX="24.0" layoutY="175.0" prefHeight="278.0" prefWidth="398.0" text="Description" textFill="WHITE" />
+            <Label fx:id="Niveau1" layoutX="23.0" layoutY="158.0" prefHeight="18.0" prefWidth="46.0" style="-fx-font-weight: bold;" text="Niveau" textFill="WHITE">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <Button layoutX="64.0" layoutY="489.0" mnemonicParsing="false" onAction="#precedent" style="-fx-background-color: white; -fx-text-fill: red; -fx-font-weight: bold; -fx-border-color: red;" text="Précedent" />
+            <Button layoutX="332.0" layoutY="489.0" mnemonicParsing="false" onAction="#suivant" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: white; -fx-text-fill: red; -fx-font-weight: bold; -fx-border-color: red;" text="Suivant" />
          </children>
       </Pane>
       <ImageView layoutX="283.0" layoutY="599.0" pickOnBounds="true" preserveRatio="true">
@@ -56,7 +105,9 @@
             <Image url="@photo/Postuler.png" />
          </image>
       </ImageView>
-      <Button fx:id="postuler" layoutX="283.0" layoutY="599.0" mnemonicParsing="false" onAction="#postuler" opacity="0.0" prefHeight="16.0" prefWidth="106.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold;" text="Postuler" />
-      <Button layoutX="407.0" layoutY="42.0" mnemonicParsing="false" onAction="#rechercher" prefHeight="26.0" prefWidth="77.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold;" text="rechercher" />
+      <Button fx:id="postuler" layoutX="282.0" layoutY="597.0" mnemonicParsing="false" onAction="#postuler" opacity="0.0" prefHeight="16.0" prefWidth="106.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold;" text="Postuler" />
+      <Button layoutX="394.0" layoutY="37.0" mnemonicParsing="false" onAction="#rechercher" opacity="0.0" prefHeight="26.0" prefWidth="105.0" style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold;" text="rechercher" />
+      <TextField fx:id="mot" layoutX="169.0" layoutY="37.0" prefHeight="26.0" prefWidth="209.0" promptText="Mots Clés" />
+      <Button fx:id="BHome" layoutX="582.0" layoutY="643.0" mnemonicParsing="false" onAction="#BHome" opacity="0.0" prefHeight="61.0" prefWidth="70.0" text="Home" />
    </children>
 </AnchorPane>
