--- a/xmart-frontend/src/main/resources/Admin.fxml
+++ b/xmart-frontend/src/main/resources/Admin.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -77,6 +78,7 @@
                         <Image url="@photo/images.jpeg" />
                      </image>
                   </ImageView>
+                  <Button layoutX="20.0" layoutY="408.0" mnemonicParsing="false" onAction="#liste" prefHeight="46.0" prefWidth="174.0" text="Liste des etudiants" />
           </children>
         </AnchorPane>
         <ScrollPane>
