deux designs pour l'interface'de Connexion et CreateAccount

--- a/xmart-frontend/src/main/resources/CreateAccount2.fxml
+++ b/xmart-frontend/src/main/resources/CreateAccount2.fxml
@@ -12,7 +12,7 @@
    <children>
       <ImageView pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@photo/CreationCompte%20(1).png" />
+            <Image url="@photo/CreationCompte (1).png" />
          </image>
       </ImageView>
       <TextField fx:id="Nom" layoutX="232.0" layoutY="331.0" prefHeight="26.0" prefWidth="208.0" />
@@ -21,7 +21,7 @@
       <PasswordField fx:id="mot_de_passe" layoutX="232.0" layoutY="487.0" prefHeight="26.0" prefWidth="208.0" />
       <PasswordField fx:id="cnf_mot_de_passe" layoutX="232.0" layoutY="539.0" prefHeight="26.0" prefWidth="208.0" />
       <Button fx:id="fichier" layoutX="292.0" layoutY="594.0" mnemonicParsing="false" onMouseClicked="#fichier" prefHeight="26.0" prefWidth="88.0" style="-fx-background-color: white;" text="Parcourir ..." />
-      <Label layoutX="243.0" layoutY="681.0" onMouseClicked="#connexion" opacity="0.0" prefHeight="18.0" prefWidth="184.0" text="Label" />
+      <Label layoutX="243.0" layoutY="681.0" onMouseClicked="#connexion2" opacity="0.0" prefHeight="18.0" prefWidth="184.0" text="Label" />
       <TextField fx:id="Matricule" layoutX="232.0" layoutY="280.0" prefHeight="26.0" prefWidth="208.0" />
       <Button fx:id="seConnecter" layoutX="232.0" layoutY="645.0" mnemonicParsing="false" onAction="#seConnecter" opacity="0.0" prefHeight="26.0" prefWidth="208.0" text="Button" />
       <Label fx:id="photo" layoutX="391.0" layoutY="598.0" prefHeight="18.0" prefWidth="54.0" />
