--- a/xmart-frontend/src/main/resources/Connexion2.fxml
+++ b/xmart-frontend/src/main/resources/Connexion2.fxml
@@ -4,13 +4,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="672.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.connexion">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="672.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ezip.ing1.pds.Connexion">
    <children>
-      <ImageView pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="720.0" fitWidth="686.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@photo/Connexion.png" />
          </image>
@@ -18,6 +19,7 @@
       <TextField fx:id="email" layoutX="231.0" layoutY="348.0" prefHeight="26.0" prefWidth="208.0" />
       <Button fx:id="seConnecter" layoutX="259.0" layoutY="457.0" mnemonicParsing="false" onAction="#seConnecter" opacity="0.0" prefHeight="26.0" prefWidth="150.0" text="Button" />
       <PasswordField fx:id="motdepasse" layoutX="231.0" layoutY="400.0" prefHeight="26.0" prefWidth="208.0" />
-      <Label layoutX="245.0" layoutY="490.0" onMouseClicked="#CreateAcount" opacity="0.0" prefHeight="18.0" prefWidth="182.0" text="Label" />
+      <Label layoutX="245.0" layoutY="490.0" onMouseClicked="#CreateAcount2" opacity="0.0" prefHeight="18.0" prefWidth="182.0" text="Label" />
+      <ToggleButton fx:id="design" layoutX="542.0" layoutY="671.0" mnemonicParsing="false" onAction="#AncienDesign" prefHeight="26.0" prefWidth="107.0" text="Ancien design" />
    </children>
 </AnchorPane>
